--- a/notebooks/EDA.ipynb
+++ b/notebooks/EDA.ipynb
@@ -1304,21 +1304,117 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "n= 10\n",
+    "\n",
+    "def prime(n):\n",
+    "    c=[]\n",
+    "    for i in range(n+1):\n",
+    "        if i%2!=0:\n",
+    "            c = i+2\n",
+    "            print(c)\n",
+    "        else:\n",
+    "            continue"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n",
+      "5\n",
+      "7\n",
+      "9\n",
+      "11\n"
+     ]
+    }
+   ],
+   "source": [
+    "prime(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def prime(n):\n",
+    "    a=1\n",
+    "    c=[]\n",
+    "    while len(c) < n:\n",
+    "        print(\"hello\")\n",
+    "        a=a+2\n",
+    "        c.append(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "3\n",
+      "5\n",
+      "7\n",
+      "9\n",
+      "11\n",
+      "13\n",
+      "15\n",
+      "17\n",
+      "19\n"
+     ]
+    }
+   ],
+   "source": [
+    "prime(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (1605714846.py, line 5)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  Cell \u001b[0;32mIn[43], line 5\u001b[0;36m\u001b[0m\n\u001b[0;31m    if a%%2==0:\u001b[0m\n\u001b[0m         ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
+    "def prime(n):\n",
+    "    a=1\n",
+    "    c=[]\n",
+    "    while len(c) < n:\n",
+    "        if 2==0:\n",
+    "            print(c)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
    "source": []
   }
  ],
